// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormTextArea should render when passed a placeholder 1`] = `
<div>
  <textarea
    className="text_area"
    onChange={[Function]}
    placeholder="testplaceholder"
  />
</div>
`;

<<<<<<< HEAD
exports[`FormTextArea should render with just required props passed 1`] = `
=======
exports[`FormTextArea should render with required props 1`] = `
>>>>>>> 1e3818fe1ed61deeda96881e0e7a718d44c1dd4e
<div>
  <textarea
    className="text_area"
    onChange={[Function]}
    placeholder=""
  />
</div>
`;
